Use minSdk-safe URL encoding